--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -1,306 +1,3 @@
 
-/* GLOBAL STYLES
--------------------------------------------------- */
-/* Padding below the footer and lighter body text */
-
-body,html{}
-
-body {
-  color: #5a5a5a;
-  font-family: 'Open Sans',Arial,sans-serif;
-  font-size: 15px;
-}
-h1,h2,h3,h4,h5{
-    font-family: 'Montserrat', sans-serif;
-}
-a, a:hover, .btn{outline:none!important;}
-.btn-search{background: #FD3A13; border-color: #FD3A13; color: #fff; padding: 7px 10px}
-.btn-search:hover{background: #ca1b1b; border-color: #ca1b1b}
-section{padding: 20px 0; float: left; width: 100%}
-.card{box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);transition: 0.3s;	margin-bottom:20px;}
-.navbar {border: medium none; float: left; margin-bottom: 0px; width: 100%;  border-radius: 0}
-.title-large {font-size: 20px; margin: 10px 0 5px; line-height: 27px; color: #141517;}
-.title-small {color: #141517; font-size: 16px; font-weight: 400; line-height: 23px; margin: 6px 0 0;}
-.title-x-small {font-size: 18px; margin: 0px;}
-.title-large a, .title-small a, .title-x-small a{color: inherit}
-
-.banner-sec{float: left; width: 100%; background: #EBEBEB}
-.card-block{padding:0 10px 10px;}
-.card-text{margin: 0}
-.text-time{color: #ff0000; font-weight: 600;}
-.banner-sec .card-img-overlay{padding: 0; top: 3px; left: 7px; height: 20%}
-
-.vertical-align {display: flex;align-items: center;justify-content: center;flex-direction: row;}
-
-
-/* HEADER */
-header{float: left; width:100%}
-.small-top{background-color: #0A2F88; border-bottom: 1px solid #2b2b2b;}
-.small-top a {color: #efefef; font-size: 12px; line-height: 2; padding: 0 13px;}
-
-.top-head {background-color: #fff;}
-.top-head .logo {height: 100px;}
-.top-head .logo img {	
-	max-height: 100%;  
-    max-width: 100%; 
-    width: auto;
-    height: 80px;
-    position: absolute;  
-    top: 0;  
-    bottom: 0;  
-    left: 0;  
-    right: 0;  
-    margin: auto;
-}
-
-.top-head  .search {
-    float:left;
-	margin:auto;	
-}
-
-.top-head  .search  form{
-    padding:0;	
-}
-
-.top-head  .search input{
-	width:224px !important;    
-}
-
-.top-head .tulisberita{	
-	margin:auto;
-}
-
-.top-head .tulisberita button{	
-	color: #fff;
-	background-color: #0A2F88;
-	width:100%;	
-}
-
-.top-head .selectlang  { 	
-	margin:auto;
-}
-.top-head .selectlang  select{    
-   border:0;
-   outline:0;
-}
-
-
-.top-head .admin-bar img {    
-    height: 40px;  
-    width: 40px;
-}
-
-/*top Navigation*/
-.top-nav  nav  li a:hover{ background-color:transparent}
-
-.navbar-custom {
-	background-color: #F5DF00;
-  	border-radius:0;
-    min-height:auto;
-}
-  
-.navbar-custom .navbar-nav > li > a {
-  	color: #0A2F88;
-	text-transform: uppercase;    
-    font-family: 'Heebo',sans-serif;
-    font-size: 14px;
-    padding:14px 10px;
-    font-weight: 700;
-}
-.navbar-custom .navbar-nav > .active > a, .navbar-nav > .active > a:hover, .navbar-nav > .active > a:focus {
-   	background-color:none;
-	border-bottom:2px solid #0A2F88;
-	
-}
-      
-.navbar-custom .navbar-nav > li > a:hover, .nav > li > a:focus {
-    text-decoration: none;
-    background-color: none;
-	border-bottom:2px solid #0A2F88;
-}
-
-.navbar-custom .navbar-toggle,
-.navbar-custom .nav .open>a, .navbar-custom .nav .open>a:hover, .navbar-custom .nav .open>a:focus {
-   background-color:none;
-}
-
-.navbar-custom .icon-bar {
-   border: 1px solid #fff;                
-}
-
-/*-- change navbar dropdown color --*/
-.navbar-custom .navbar-nav .open .dropdown-menu>li>a,.navbar-custom .navbar-nav .open .dropdown-menu {
-    color:#428bca;
-}
-
-
-.top-nav .social_nav{ display:block; }
-.top-nav .social_nav li{ display:block; float:left}
-.top-nav .social_nav li a{ color:#0A2F88; padding-left:0; padding-right:0; }
-.top-nav .social_nav li a:hover{ color:none; border:none; }
-
-.main-slider{
-    background-color: #e6e6e6;   
-    float: left;
-    width:100%;
-}
-
-/*BERITA TERBARU*/
-/*Home-section 1*/
-.section-01{float: left; width: 100%;  border-top: 1px solid #d5d5d5; border-bottom: 1px solid #d5d5d5}
-.section-01 .heading-large {border-bottom: 2px solid #222; color: #222; float: left; width: 100%; padding:0 0 6px; margin:0 0 18px; text-align: left;}
-.section-01 .heading-large::before, .section-01 .heading-large::after{background: transparent;}
-.section-01 .heading-small {border-bottom: 2px solid #222; color: #222; float: left; margin: 7px 0 0; width: 100%; padding-bottom: 10px; font-size: 18px }
-.section-01 .title-small {margin-bottom: 5px; font-size:17px }
-.section-01 .news-block{border-bottom: 1px dashed #000; padding-bottom: 30px; border: none;}
-.section-01 aside > .news-block{border-bottom: 1px dashed #000; padding-bottom: 19px;}
-.section-01 aside > .news-block:last-child{border-bottom: none; margin-bottom: 20px}
-.section-01 .card{
-	 /* Add shadows to create the "card" effect */
-    
-}
-
-.section-01 .card{
-	min-height:380px;
-}
-.section-01 .card img{	
-	width:100%;
-}
-
-.section-01 .card .card-block{
-	padding: 2px 16px 8px 16px;
-}
-
-
-.side-bar .popular{ padding:10px; margin:0; border: 1px solid #000;}
-.popular .media{}
-.popular .media-left img{width: 120px;}
-.popular .title-small {line-height: 23px; margin-top: 5px; font-size: 18px}
-
-.side-bar .infografis img {width:100%;}
-.side-bar .ads {background-color:#ddd;min-height:350px}
-
-.citra #video-bg {
-	top:50%;
-	left:50%;
-	min-width:100%;
-	min-height:100%;
-	width:auto;
-	height:auto;
-	z-index: -100;
-    -webkit-transform: translateX(-50%) translateY(-50%);
-    transform: translateX(-50%) translateY(-50%);    
-    background-size: cover;
-}
-
-.citra{
-	position: relative;
-	overflow: hidden; 
-	background-color: rgba(0, 0, 0, 0.6);
-	top:0%;
-	left:0%;
-	height:100%;
-	width:100%;	
-	min-height:400px;
-}
-
-.citra video {
-	position:absolute;
-	z-index:0;
-	
-}
-
-.citra .header-text{
-	color: #fff;
-	margin-top:20%;
-}
-.citra .header-text h2 {
-    font-size: 20px;
-}
-
-.citra .header-text h2 span {
-    background-color: #0A2F88;
-	padding: 10px;
-}
-
-.citra .header-text p {
-	font-size: 14px;
-}
-
-/*Footer Style*/
-footer {
-	float: left;
-	width: 100%;
-	background-color: #141517;
-	color: #fff;
-	padding-top:40px;
-}
-
-footer .text-center{
-	display: flex;
-	justify-content: center;
-	margin-bottom: 10px;
-}
-footer ul li{
-    float:left;
-	list-style-type: none;    
-}
-
-footer ul li a{
-	color:#b1aca1;
-    padding:10px;
-}
-
-footer ul li a:hover{
-	color:#7dabdb;
-	text-decoration:none;
-}
-
-footer .social-icons i {
-    background-color: #fff;
-    border-radius: 50%;
-    color: #141517;
-    font-size: 16px;
-    height: 30px;
-    line-height: 30px;
-    margin-bottom: 10px;
-    text-align: center;
-    width: 30px;
-}
-footer .menu {    
-    margin-bottom: 30px;		
-}
-
-footer .copy{
-	font-size:12px;
-	background-color:#222;
-}
-
-@media (max-width:767px) { 	
-	
-	.custom-navbar .navbar-right {
-	    float: right;
-		
-	}
-	.custom-navbar .nav.navbar-nav.navbar-right li {
-	    float: right;
-	}
-  	.custom-navbar .nav.navbar-nav.navbar-right li > a {
-	    color: #000
-	}
-	.custom-navbar .navbar-toggle {
-	    float: left
-	}
-	.custom-navbar .navbar-header {
-	    float: left;
-	    width: auto!important;
-	}
-	.custom-navbar .navbar-collapse {
-	    clear: both;
-	    float: none;
-	}
-}
-
-
-
-
+$bb-blue : #0A2F88;
+$bb-yellow : #F5DF00;
