--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,8 +2,9 @@
 @import './mixin.scss';
 @import './transition.scss';
 @import './element-ui.scss';
+@import 'element-ui/lib/theme-chalk/display.css';
 @import './sidebar.scss';
-@import './home.scss';
+//@import './home.scss';
 
 body {
   -moz-osx-font-smoothing: grayscale;
