--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -1,80 +1,16 @@
-//@import url('https://fonts.googleapis.com/css?family=Roboto:400,700');
-
+/*
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,700');
 $bb-blue : #0A2F88;
 $bb-yellow : #F5DF00;
-
-body{
-    font-family: 'Roboto', sans-serif;
-}
-.container{
-    width: 96%;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-
-/* 
-  ##Device = Desktops
-  ##Screen = 1281px to higher resolution desktops
 */
 
-@media (min-width: 1281px) {
+body{
+  margin: 0; padding: 0;
+}
+
+.container {  
+  max-width: 1020px;
+  margin: 0 auto;
+  padding: 0;
   
-    //CSS
-    
-  }
-  
-  /* 
-    ##Device = Laptops, Desktops
-    ##Screen = B/w 1025px to 1280px
-  */
-  
-  @media (min-width: 1025px) and (max-width: 1280px) {
-    
-    //CSS
-    
-  }
-  
-  /* 
-    ##Device = Tablets, Ipads (portrait)
-    ##Screen = B/w 768px to 1024px
-  */
-  
-  @media (min-width: 768px) and (max-width: 1024px) {
-    
-    //CSS
-    
-  }
-  
-  /* 
-    ##Device = Tablets, Ipads (landscape)
-    ##Screen = B/w 768px to 1024px
-  */
-  
-  @media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
-    
-    //CSS
-    
-  }
-  
-  /* 
-    ##Device = Low Resolution Tablets, Mobiles (Landscape)
-    ##Screen = B/w 481px to 767px
-  */
-  
-  @media (min-width: 481px) and (max-width: 767px) {
-    
-    //CSS
-    
-  }
-  
-  /* 
-    ##Device = Most of the Smartphones Mobiles (Portrait)
-    ##Screen = B/w 320px to 479px
-  */
-  
-  @media (min-width: 320px) and (max-width: 480px) {
-    
-    //CSS
-    
-  }
+}
