reactivate home.scss

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,7 +4,7 @@
 @import './element-ui.scss';
 @import 'element-ui/lib/theme-chalk/display.css';
 @import './sidebar.scss';
-//@import './home.scss';
+@import './home.scss';
 
 body {
   -moz-osx-font-smoothing: grayscale;
