--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -1,4 +1,4 @@
-//@import url('https://fonts.googleapis.com/css?family=Roboto:400,700');
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,700');
 
 $bb-blue : #0A2F88;
 $bb-yellow : #F5DF00;
