--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -6,11 +6,20 @@
 @import './sidebar.scss';
 //@import './home.scss';
 
+@font-face {
+  font-family: 'DINPro-Regular';
+  src: url('../assets/fonts/dinpro/DINPro-Regular_13937.ttf'); 
+}
+@font-face {
+  font-family: 'Neosans-Medium-Italic';
+  src: url('../assets/fonts/neosans/NeoSans Medium Italic.otf'); 
+}
 body {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
-  font-family: Helvetica Neue, Helvetica, PingFang SC, Hiragino Sans GB, Microsoft YaHei, Arial, sans-serif;
+  //font-family: Helvetica Neue, Helvetica, PingFang SC, Hiragino Sans GB, Microsoft YaHei, Arial, sans-serif;
+  font-family: DINPro-Regular, Neosans-Medium-Italic, Arial, sans-serif;
 }
 
 html {
@@ -62,4 +71,22 @@ a:hover {
 
 .m-t-10 {
   margin-top: 10px;
+}
+
+.m-tb-10 {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.section-title {
+  font-size: 20px;
+  color: #042f7f;
+  font-weight: bold;
+}
+
+.h-divider{
+  content: "";
+  flex: 1 1;
+  border-bottom: 1px solid #000;
+  margin: auto;
 }
