adding colors variable

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -4,5 +4,11 @@ $subMenuBg:#1f2d3d;
 $menuHover:#001528;
 
 //frontpage
-$bb-blue : #0A2F88;
-$bb-yellow : #F5DF00;
+$bb-blue: #0A2F88;
+$bb-blue1: #174596;
+$bb-blue2: #0071CF;
+$bb-yellow: #F5DF00;
+$bb-yellow1: #F0D302;
+$bb-yellow2: #B9BE31;
+$bb-white: #DEE4F0;
+
