--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -78,6 +78,11 @@ a:hover {
   margin-bottom: 10px;
 }
 
+.latest-news-title {
+  font-size: 25px;
+  color: #042f7f;
+  font-weight: bold;
+}
 .section-title {
   font-size: 20px;
   color: #042f7f;
@@ -88,5 +93,36 @@ a:hover {
   content: "";
   flex: 1 1;
   border-bottom: 1px solid #000;
+  margin: auto;
+}
+
+.v-icon,
+  .icon-20 {
+    width: 20px;
+  }
+
+.article-content{
+  color: #696968
+}
+
+.main-footer{
+  background-color: #696968;
+  color: #fff;
+}
+
+.side-separator {
+  margin-top: 10px;
+  text-align: right;
+  
+}
+.side-separator span{
+  display: flex;
+  flex-direction: row;
+  color: #b0b0b0;
+}
+.side-separator span:before{
+  content: "";
+  flex: 1 1;
+  border-bottom: 1px solid #e6e6e6;
   margin: auto;
 }
