--- a/src/styles/popular-news-side.scss
+++ b/src/styles/popular-news-side.scss
@@ -1,38 +1,33 @@
-.mini-thumbnail {
-    position: relative;
-}
-.mini-thumbnail .card-image{
-    width: 100%;
-    height: auto;
-    max-height: 235px;
-}
-
-.card-image{
-    width: 100%;
-    height: auto;
-    max-height: 235px;
-}
-
-.mini-thumbnail .editorial-type-img {
-    position: absolute;
-    top: 3%;
-    left: 3%;
-    // transform: translate( -50%, -50% );
-    text-align: center;
-    color: white;
-    font-weight: bold;
-    background-color: #0a2f88;
-    padding-left: 15px;
-    padding-right: 15px;
-}
-.mini-thumbnail img{
-    width: 100%;
-    height: auto;
-    display: block;
-}
-
 .popular-news {
     border: solid 1px;
     padding: 15px;
     border-color: #e6e6e6;
+}
+.popular-news .side-row{
+    height: 110px;
+}
+.popular-news .side-row .side-content {
+    padding-left: 1em;
+    height: 100%;
+
+}
+.popular-news .side-row .side-content .content-container{
+    height: auto;
+}
+.popular-news .side-row .side-content .content-container .side-title-section{
+    min-height: 55px;
+    max-height: 55px;
+
+}
+.popular-news .side-row .side-image {
+    margin-bottom: 0.8em;
+}
+.popular-news .side-row .side-image .card-image{
+    width: 100%;
+    height: auto;
+}
+
+.popular-news .side-row .side-content  .footer{
+    font-weight: bold;
+    font-size: 0.8em;
 }
