--- a/src/styles/articles-card.scss
+++ b/src/styles/articles-card.scss
@@ -9,7 +9,7 @@
     border-color: #e6e6e6;
 }.card-content .news-col .news-card{
     margin: 5px;
-} .card-content .news-col .news-card .title{
+} .card-content .news-col .news-card .ac-title{
     font-weight: bold;
     font-size: 1.0em;
 }.card-content .news-col .news-card .footer{
