--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -120,6 +120,9 @@ a:hover {
   .icon-20 {
     width: 20px;
   }
+  .icon-1dot8em {
+    width: 1.8em;
+  }
 
 .article-content{
   color: #696968
@@ -133,7 +136,6 @@ a:hover {
 .side-separator {
   margin-top: 10px;
   text-align: right;
-  
 }
 .side-separator span{
   display: flex;
@@ -146,6 +148,23 @@ a:hover {
   border-bottom: 1px solid #e6e6e6;
   margin: auto;
 }
+
+.black-separator {
+  margin-top: 10px;
+  text-align: right;
+}
+.black-separator span{
+  display: flex;
+  flex-direction: row;
+  color: #000;
+}
+.black-separator span:before{
+  content: "";
+  flex: 1 1;
+  border-bottom: 1px solid #000;
+  margin: auto;
+}
+
 .align-right {
   text-align: right;
 }
@@ -167,5 +186,8 @@ a:hover {
   width: 90px;
   text-align: center;
 
+}
+.font-blue {
+  color: $bb-blue;
 }
 //END start
