--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -120,6 +120,9 @@ a:hover {
   .icon-20 {
     width: 20px;
   }
+  .icon-0dot8em {
+    width: 0.8em;
+  }
   .icon-1dot8em {
     width: 1.8em;
   }
