--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -69,6 +69,14 @@ a:hover {
   padding: 20px;
 }
 
+.content-container {
+  width: 80%;
+  margin: 0 auto;
+}
+.sub-content-container {
+  width: 90%;
+  margin: 0 auto;
+}
 
 //DARFAT start
 .m-t-10 {
@@ -204,5 +212,8 @@ a:hover {
 }
 .font-h1{
   font-size: 2.0em;
+}
+.grid-content {
+  min-height: 36px;
 }
 //END start
