--- a/src/styles/infografis-list.scss
+++ b/src/styles/infografis-list.scss
@@ -1,19 +1,20 @@
 @import './variables.scss';
 
 .infografis-list{
-
+    width: 100%;
 }
 .infografis-list .infografis-header{
     padding-top: 10px;
     padding-bottom: 5px;
     font-style: bold;
-    // color: #fff;
+    color: #fff;
     font-size: 1.6em;
 }
 .infografis-list .infografis-content{
-
+    width: 100%;
 }
 .infografis-list .infografis-content .infografis-col {
+    padding: 15px;
 }
 .infografis-list .infografis-content .infografis-col .infografis-card {
     margin-top: 5px;
