css popular side and card

--- a/src/styles/gallery-main.scss
+++ b/src/styles/gallery-main.scss
@@ -3,3 +3,11 @@
 .gallery-main {
     padding-top: 150px
 }
+.gallery-main .gallery-main-container{
+    background-color: #000;
+    
+}
+.gallery-main .gallery-main-container .gallery-main-list{
+    width: 80%;
+    margin: 0 auto;
+}
