--- a/src/styles/gallery.scss
+++ b/src/styles/gallery.scss
@@ -12,6 +12,7 @@
 }
 .gallery-detail .gallery-content{
     margin-bottom: 10px;
+    background-color: #fff;
 }
 .gallery-detail .gallery-content .gallery-col {
     margin-top: 5px;
@@ -60,10 +61,8 @@
 }
 
 
-
 .gallery-detail .gallery-card-container .gallery-col {
-    margin: 10px;
-
+    padding: 15px;
 }
 .gallery-detail .gallery-card-container .gallery-col .gallery-card{
     margin-top: 5px;
