--- a/src/styles/popular-news-side.scss
+++ b/src/styles/popular-news-side.scss
@@ -2,6 +2,7 @@
     border: solid 1px;
     padding: 15px;
     border-color: #e6e6e6;
+    font-size: 0.8em;
 }
 .popular-news .side-row{
     height: 110px;
@@ -24,7 +25,7 @@
 }
 .popular-news .side-row .side-image .card-image{
     width: 100%;
-    height: auto;
+    height: 90px;
 }
 
 .popular-news .side-row .side-content  .footer{
