post comment + payload

--- a/src/styles/comment-list.scss
+++ b/src/styles/comment-list.scss
@@ -8,6 +8,10 @@
     padding-top: 20px;
     padding-bottom: 20px;
 }
+.comment-list .content .data{
+    margin-top: 20px;
+}
+
 .comment-list .comment-info{
 }
 .comment-list .comment-info .comment-date{
