new color scheme

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -16,3 +16,10 @@ $bb-grayWhite: #928e8e;
 $bb-gray: #e6e6e6;
 $bb-black: #000000;
 
+/* new color scheme */
+$main-blue: #051D49;
+$blue-1: #0071B9;
+$main-red: #EB0029;
+$red-1: #7B303E;
+$black-1: #0A0A0A;
+$black-2: #323232;
