--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -5,6 +5,9 @@ body{
 .container {  
   max-width: 1020px;
   margin: 0 auto;
-  padding: 0;
+  // padding: 0;
+  @media all and (max-width : 768px) {
+    // padding: 0 10px;
+  }
     
 }
