--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -1,13 +1,12 @@
 body{
-  margin: 0; padding: 0;
+  margin: 0 auto; padding: 0;
 }
 
 .container {  
-  max-width: 1020px;
+  position: relative;
+  max-width: 1170px;
   margin: 0 auto;
-  // padding: 0;
-  @media all and (max-width : 768px) {
-    // padding: 0 10px;
-  }
+  padding-left: 10px;
+  padding-right: 10px;  
     
 }
