--- a/src/styles/infografis-side.scss
+++ b/src/styles/infografis-side.scss
@@ -8,11 +8,13 @@
 }
 
 .infografis-news .side-row .side-image {
-    margin-bottom: 0.8em;
+    // margin-bottom: 0.8em;
 }
 .infografis-news .side-row .side-image .card-image{
-    width: 310px;
-    height: 100%;
+    // width: 310px;
+    // height: 100%;
+    width: 100%;
+    height: auto;
 }
 
 .infografis-news .side-row .side-content  .footer{
