--- a/src/styles/gallery-main.scss
+++ b/src/styles/gallery-main.scss
@@ -1,7 +1,7 @@
 @import './variables.scss';
 
 .gallery-main {
-    padding-top: 150px
+    // padding-top: 150px
 }
 .gallery-main .gallery-main-container{
     background-color: #000;
