--- a/src/styles/infografis-main.scss
+++ b/src/styles/infografis-main.scss
@@ -1,7 +1,7 @@
 @import './variables.scss';
 
 .infografis-main{
-    padding-top: 150px;
+    // padding-top: 150px;
 }
 .infografis-main .infografis-main-container{
     background-color: #000;
