--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -15,7 +15,7 @@ $bb-white: #DEE4F0;
 $bb-grayWhite: #928e8e;
 $bb-gray: #e6e6e6;
 $bb-black: #000000;
-
+$bb-white-menu: #ffffff;
 /* new color scheme */
 $main-blue: #051D49;
 $blue-1: #0071B9;
