like article style

--- a/src/styles/article.scss
+++ b/src/styles/article.scss
@@ -1,7 +1,7 @@
 @import './variables.scss';
 
 .article-container {
-    padding-top: 150px
+    //padding-top: 150px
 }
 .article-container .headline-container {
     background-color: $bb-gray;
