--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -128,6 +128,12 @@ a:hover {
   .icon-20 {
     width: 20px;
   }
+  .icon-30 {
+    width: 30px;
+  }
+  .icon-40 {
+    width: 40px;
+  }
   .icon-0dot8em {
     width: 0.8em;
   }
