--- a/src/styles/articles-card.scss
+++ b/src/styles/articles-card.scss
@@ -4,10 +4,10 @@
 
 .card-content .news-col{
     //margin: 10px;
-    border: solid 1px;
-    border-color: #e6e6e6;
+    // border: solid 1px;
+    // border-color: #e6e6e6;
 }.card-content .news-col .news-card{
-    margin: 5px;
+    // margin: 5px;
 } .card-content .news-col .news-card .ac-title h2{
     font-weight: bold;
     font-size: 0.9em;
@@ -52,14 +52,14 @@
     font-size: 0.9em;
 }
 .el-row {
-    margin-bottom: 10px;
+    margin-bottom: 20px;
    &:last-child {
     margin-bottom: 0;
    }
  }
 
 .el-col {
-     margin-bottom: 10px;
+     margin-bottom: 20px;
     &:last-child {
      margin-bottom: 0;
     }
