--- a/src/styles/popular-news-side.scss
+++ b/src/styles/popular-news-side.scss
@@ -28,7 +28,8 @@
     height: 90px;
 }
 
-.popular-news .side-row .side-content  .footer{
+.popular-news .side-row .side-content  .side-footer{
     font-weight: bold;
     font-size: 0.8em;
+    margin-left: -3px;
 }
