--- a/src/styles/articles-card.scss
+++ b/src/styles/articles-card.scss
@@ -8,7 +8,7 @@
     // border-color: #e6e6e6;
 }.card-content .news-col .news-card{
     // margin: 5px;
-} .card-content .news-col .news-card .ac-title h2{
+} .card-content .news-col .news-card .ac-title span{
     font-weight: bold;
     font-size: 0.9em;
 }.card-content .news-col .news-card .footer{
@@ -63,4 +63,15 @@
     &:last-child {
      margin-bottom: 0;
     }
-  }
+}
+
+.ac-bottom-content{
+    padding-top: 10px;
+    padding-left: 14px;
+    padding-right: 14px;
+}
+.ac-footer{
+    font-weight: bold;
+    font-size: 0.8em;   
+    margin-left: -3px;
+}
