--- a/src/styles/love.scss
+++ b/src/styles/love.scss
@@ -11,8 +11,8 @@ $love-color: #f35858;
     color: $love-color;
 }
 .hate-me{
-    fill: none;
-    color: none;
+    fill: #fff;
+    color: #000;
 }
 
 a:active, a:focus { 
