--- a/src/styles/article.scss
+++ b/src/styles/article.scss
@@ -5,6 +5,7 @@
 }
 .article-container .headline-container {
     background-color: $bb-gray;
+    padding: 40px 0 20px 0;
 }
 .grid-content {
     border-radius: 4px;
@@ -14,7 +15,7 @@
     padding: 10px;
 }
 .article-container .headline-container .title-container .a-title {
-    font-size: 30px;
+    // font-size: 30px;
     color: #042f7f;
 }
 .article-container .headline-container .main{
@@ -35,27 +36,42 @@
     color: white;
     font-weight: bold;
     background-color: #0a2f88;
-    padding-left: 8px;
-    padding-right: 8px;
+    padding-left: 16px;
+    padding-right: 16px;
+    h2{
+        text-transform: uppercase;
+        
+    }
 }
 .article-container .headline-container .main .thumbnail img{
     width: 100%;
     height: auto;
-    //display: block;
+    display: block;
 }
 .article-container .headline-container .main .content{
     padding-left: 20px;
     padding-right: 20px;
     padding-bottom: 20px;
 }
-.article-container .headline-container .main .content .title{
-    font-weight: bold;
-    font-size: 1.1em;
+.article-container .headline-container .main .content .a-title{
+    // font-weight: bold;
+    // font-size: 1.1em;
+    h1{
+        font-size: 3em;
+        margin-bottom: 0;
+        color: $black-1;
+    }
 }
 
 .article-container .headline-container .main .content .footer{
     font-weight: bold;
     font-size: 0.8em;
+}
+
+.article-container .headline-container .main .content .teks{
+    color: $black-2;
+    line-height: 1.5em;
+    font-size: 1.1em;
 }
 .article-container .headline-container .main .content .article-option{
     color: #696968
