--- a/src/styles/comment-box.scss
+++ b/src/styles/comment-box.scss
@@ -8,4 +8,9 @@
     padding-right: 25px;
     padding-top: 20px;
     padding-bottom: 20px;
+
+    img{
+        width: auto;
+        height: 100%;
+    }
 }
