icon social feed

--- a/src/styles/social-feed.scss
+++ b/src/styles/social-feed.scss
@@ -18,6 +18,9 @@
     position:absolute;
     bottom:15px;
 }
+.social-feed .feed-main .feed-content .feed-logo a{
+    padding: 0 6px;
+}
 .social-feed .feed-list{
     color: $bb-grayWhite;
     border:$bb-gray solid 0.5px;
