--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -240,4 +240,13 @@ a:hover {
 .grid-content {
   min-height: 36px;
 }
+
+
+.circle-white-icon{
+    width: 34px;
+    height: 34px;
+    border-radius: 50%;
+    padding: 6px;
+    border: 2px solid $bb-white-menu;
+}
 //END start
