--- a/src/styles/gallery.scss
+++ b/src/styles/gallery.scss
@@ -15,7 +15,7 @@
     background-color: #fff;
 }
 .gallery-detail .gallery-content .gallery-col {
-    margin-top: 5px;
+    // margin-top: 5px;
     margin-bottom: 5px;
     padding: 0px;
 
