--- a/src/styles/infografis-list.scss
+++ b/src/styles/infografis-list.scss
@@ -52,7 +52,7 @@
     text-align: center;
     color: white;
     font-weight: bold;
-    background-color: $bb-blue;
+    background-color: $blue-1;
     padding-left: 10px;
     padding-right: 10px;
     font-size: 0.8em;
