--- a/src/styles/social-feed.scss
+++ b/src/styles/social-feed.scss
@@ -5,7 +5,7 @@
 }
 
 .social-feed .feed-main{
-    background-color: $bb-blue;
+    background-color: $main-blue;
     color: #fff;
     font-size: 1em;
     min-height: 473px;
