--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -256,4 +256,16 @@ a:hover {
     padding: 6px;
     border: 2px solid $bb-white-menu;
 }
+.headline {
+  color: $headline
+}
+.sub-headline {
+  color: $subHeadline
+}
+.content {
+  color: $subHeadline
+}
+.author {
+  color: $author
+}
 //END start
