--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -23,5 +23,7 @@ $main-red: #EB0029;
 $red-1: #7B303E;
 $black-1: #0A0A0A;
 $black-2: #323232;
-
+$headline: #0A0A0A;
+$subHeadline: #323232;
+$author: #323232;
 $gray-horizontal:#e6e6e6
