--- a/src/styles/infografis-detail-main.scss
+++ b/src/styles/infografis-detail-main.scss
@@ -1,5 +1,8 @@
 @import './variables.scss';
 
 .infografis-detail-main{
-    // padding-top: 150px
+    width: 100%;
+}
+.infografis-main-container{
+    background-color: $bb-black;
 }
