color change $bb-blue > $main-blue

--- a/src/styles/comment-box.scss
+++ b/src/styles/comment-box.scss
@@ -1,7 +1,7 @@
 @import './variables.scss';
 
 .comment-box{
-    background-color: $bb-blue!important;
+    background-color: $main-blue!important;
 }
 .comment-box .content{
     padding-left: 25px;
