--- a/src/styles/infografis.scss
+++ b/src/styles/infografis.scss
@@ -51,7 +51,7 @@
     text-align: center;
     color: white;
     font-weight: bold;
-    background-color: $bb-blue;
+    background-color: $main-blue;
     padding-left: 10px;
     padding-right: 10px;
     font-size: 0.8em;
