--- a/src/styles/gallery.scss
+++ b/src/styles/gallery.scss
@@ -49,7 +49,7 @@
     text-align: center;
     color: white;
     font-weight: bold;
-    background-color: $bb-blue;
+    background-color: $main-blue;
     padding-left: 10px;
     padding-right: 10px;
     font-size: 0.8em;
@@ -99,7 +99,7 @@
     text-align: center;
     color: white;
     font-weight: bold;
-    background-color: $bb-blue;
+    background-color: $main-blue;
     padding-left: 10px;
     padding-right: 10px;
     font-size: 0.8em;
