--- a/src/styles/social-feed.scss
+++ b/src/styles/social-feed.scss
@@ -35,7 +35,7 @@
     min-height: 100px;
 }
 .social-feed .feed-list .feed-content .feed-box .feed-logo{
-    color: $bb-blue;
+    color: $main-blue;
     .icon{
         vertical-align: middle;
     }
