change color $bb-blue > $main-blue

--- a/src/styles/article.scss
+++ b/src/styles/article.scss
@@ -35,7 +35,7 @@
     text-align: center;
     color: white;
     font-weight: bold;
-    background-color: #0a2f88;
+    background-color: $main-blue;
     padding-left: 16px;
     padding-right: 16px;
     h2{
