--- a/src/styles/editorial-list.scss
+++ b/src/styles/editorial-list.scss
@@ -1,3 +1,5 @@
+@import './variables.scss';
+
 .editoral-container {
     // padding-top: 150px
 }
@@ -45,7 +47,7 @@
     text-align: center;
     color: white;
     font-weight: bold;
-    background-color: #0a2f88;
+    background-color: $main-blue;
     padding-left: 8px;
     padding-right: 8px;
 }
