font-face NeoSans

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -15,6 +15,10 @@
   src: url('../assets/fonts/dinpro/DINPRO-BOLD.ttf'); 
 }
 @font-face {
+  font-family: 'Neosans';
+  src: url('../assets/fonts/neosans/NeoSans.otf'); 
+}
+@font-face {
   font-family: 'Neosans-Medium-Italic';
   src: url('../assets/fonts/neosans/NeoSans Medium Italic.otf'); 
 }
