headline font-family: 'Neosans-Black';

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -269,7 +269,8 @@ a:hover {
     border: 2px solid $bb-white-menu;
 }
 .headline {
-  color: $headline
+  color: $headline;
+  font-family: 'Neosans-Black';
 }
 .sub-headline {
   color: $subHeadline
