editorial name: uppercase

--- a/src/styles/articles-card.scss
+++ b/src/styles/articles-card.scss
@@ -37,10 +37,10 @@
     // transform: translate( -50%, -50% );
     text-align: center;
     color: white;
-    font-weight: bold;
     background-color: #051D49;
     padding-left: 15px;
     padding-right: 15px;
+    text-transform: uppercase;
 }
 .mini-thumbnail img{
     width: 100%;
