--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -1,7 +1,9 @@
 body{
   margin: 0 auto; padding: 0;
 }
-
+h1, h2, h3, h4, h5, h6{
+  font-family: 'Neosans-Black';
+}
 .container {  
   position: relative;
   max-width: 1170px;
