--- a/src/styles/editorial-list.scss
+++ b/src/styles/editorial-list.scss
@@ -8,19 +8,20 @@
 }
 .grid-content {
     border-radius: 4px;
-    min-height: 36px;
+    min-height: 36px;    
 }
-.editoral-container .headline-container .title-container{
-    padding: 10px;
-}
-.editoral-container .headline-container .title-container .title {
-    font-size: 30px;
-    color: #042f7f;
+.editoral-container .headline-container .title-container{    
+    h1{
+        color: $main-blue;
+        font-size: 2em;
+        margin: 20px 0 0 0;
+    }
 }
 .editoral-container .headline-container .latest-news{
     background-color: #fff;
     min-height: 300px;
     margin-bottom: 40px;
+    margin-top: 20px;
 }
 
 .editoral-container .headline-container .latest-news .background {
@@ -36,20 +37,26 @@
 }
 .editoral-container .headline-container .latest-news .background img{
     width:100%;
-    height:100%;
+    max-height: 500px;
+    object-fit: cover;
 }
 
 .editoral-container .headline-container .latest-news .background .editorial-type-img {
     position: absolute;
-    top: 3%;
-    left: 3%;
+    top: 5%;
+    left: 2%;
     // transform: translate( -50%, -50% );
     text-align: center;
     color: white;
     font-weight: bold;
     background-color: $main-blue;
-    padding-left: 8px;
-    padding-right: 8px;
+    padding: 10px 10px 8px 10px;
+        h2{
+            text-transform: uppercase;
+            font-size: 1em;
+            margin: 0;
+        }
+    
 }
 
 
