--- a/src/styles/articles-card.scss
+++ b/src/styles/articles-card.scss
@@ -71,6 +71,7 @@
     padding-top: 10px;
     padding-left: 14px;
     padding-right: 14px;
+    padding-bottom: 10px;
 }
 .ac-footer{
     font-weight: bold;
