--- a/src/styles/portal-signup.scss
+++ b/src/styles/portal-signup.scss
@@ -42,7 +42,32 @@
 }
 .signup .signup-box .options .signup-with{
     margin-top: -10px;
-    font-size: 4em;
+    // font-size: 4em;
+    fb-signin-button {
+        /* This is where you control how the button looks. Be creative! */
+        display: inline-block;
+        padding: 8px 10px;
+        background-color: #4267b2;
+        color: #fff;
+        border-radius: 50%;
+        .icon{
+            width: 22px;
+            height: 22px
+        }
+    }
+    g-signin-button {
+        /* This is where you control how the button looks. Be creative! */
+        display: inline-block;
+        padding: 8px 10px;
+        background-color: #dd4b39;
+        color: #fff;
+        // box-shadow: 0 3px 0 #0f69ff;
+        border-radius: 50%;
+        .icon{
+            width: 22px;
+            height: 22px
+        }
+    }
 }
 .signup .signup-box .options .login{
  margin-top: 20px;
