related article border color

--- a/src/styles/article.scss
+++ b/src/styles/article.scss
@@ -139,8 +139,8 @@
 
 
 .bacajuga{
-    border-top: 1px solid #e6e6e6;
-    border-bottom: 1px solid #e6e6e6;
+    border-top: 1px solid #353535;
+    border-bottom: 1px solid #353535;
     margin: 20px 0;
     h4{
 
