new layout video

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -17,7 +17,7 @@ $bb-gray: #e6e6e6;
 $bb-black: #000000;
 $bb-white: #DEE4F0;
 $bb-white-menu: #ffffff;
-
+$bb-pure-white: #fff;
 /* new color scheme */
 $main-blue: #051D49;
 $blue-1: #0071B9;
