--- a/src/styles/event-calendar.scss
+++ b/src/styles/event-calendar.scss
@@ -4,12 +4,12 @@
         .__vev_calendar-wrapper{max-width:1200px;margin:0 auto}
         .__vev_calendar-wrapper .cal-wrapper{width:100%;padding:50px 0 20px 0;border-bottom: 1px solid #e6e6e6;}
         .__vev_calendar-wrapper .cal-wrapper .date-num{line-height:50px}
-        .__vev_calendar-wrapper .events-wrapper{width:100%;background-color:#f00;color:#fff;padding:40px 45px;margin-top:20px;}        
+        .__vev_calendar-wrapper .events-wrapper{width:100%;background-color:transparent!important;color:#fff;padding:20px 0;margin-top:20px;}        
     }
     @media screen and (max-width:768px){
         .__vev_calendar-wrapper .cal-wrapper{width:100%;padding:10px 5px;border-bottom: 1px solid #e6e6e6}
         .__vev_calendar-wrapper .cal-wrapper .date-num{line-height:42px}
-        .__vev_calendar-wrapper .events-wrapper{width:100%;margin-top:10px;padding:10px}
+        .__vev_calendar-wrapper .events-wrapper{width:100%;background-color:transparent!important;margin-top:10px;padding:10px}
     }
     .__vev_calendar-wrapper{position:relative;overflow:hidden;width:100%}
     .__vev_calendar-wrapper *{box-sizing:border-box}
@@ -33,10 +33,10 @@
     .__vev_calendar-wrapper .cal-wrapper .cal-body .dates .item.selected-day .is-event{background-color:#f29543}
     .__vev_calendar-wrapper .cal-wrapper .cal-body .dates .item .is-event{content:"";border:1px solid #f29543;background-color:#fff;border-radius:50%;width:36px;height:36px;position:absolute;left:50%;top:50%;z-index:1;margin-left:-18px;margin-top:-19px}
     .__vev_calendar-wrapper .cal-wrapper .cal-body .dates .item .is-today{content:"";background-color:#f29543;border-radius:50%;opacity:.8;width:12px;height:4px;position:absolute;left:50%;top:50%;z-index:2;margin-left:-6px;margin-top:8px}
-    .__vev_calendar-wrapper .events-wrapper{border-radius:10px}
+    .__vev_calendar-wrapper .events-wrapper{}
     .__vev_calendar-wrapper .events-wrapper .cal-events{height:95%;overflow-y:auto;padding:0 5px;margin:15px 0}
-    .__vev_calendar-wrapper .events-wrapper .date{max-width:60%;min-width:200px;text-align:center;color:#fff;background-color:rgba(0,0,0,.2);border-radius:20px;margin:0 auto;font-size:22px}
-    .__vev_calendar-wrapper .events-wrapper .event-item{padding:5px 20px;margin-top:15px;box-shadow:0 3px 11px 2px rgba(0,0,0,.1);background-color:#fff;border-radius:5px;color:#323232;position:relative}
+    .__vev_calendar-wrapper .events-wrapper .date{color:$main-blue;}
+    .__vev_calendar-wrapper .events-wrapper .event-item{padding:20px 10px;margin-top:10px;background-color:#e6e6e6;color:#323232;position:relative}
     .__vev_calendar-wrapper .events-wrapper .event-item:first-child{margin-top:0}
     .__vev_calendar-wrapper .events-wrapper .event-item .title{height:40px;line-height:40px;color:#323232;font-size:16px;border-bottom:1px solid #f2f2f2}
     .__vev_calendar-wrapper .events-wrapper .event-item .time{position:absolute;right:30px;top:17px;color:#9b9b9b;font-size:14px}
